# cpp20_template

./: .gitignore  README.md  meson.build
chapters/SFINAE/: 01_SFINAE.cpp  02_hard_error.cpp  03_example.cpp  04_enable_if.cpp  05_enable_if_complex.cpp  06_void_t.cpp
chapters/class_template/: 01_deduction_guides.cpp  02_defauft_template_argument.cpp  03_template_template_param.cpp  04_member function template.cpp  05_variadic_class_template.cpp  meson.build
chapters/concept_and_requires/: 01_require_operator_add.cpp
chapters/dependent_name/: 01_typename_lookup.cpp  02_template_loopup.cpp
chapters/explicit_template_instantiation/: main.cpp  meson.build  template_utils.cpp  template_utils.h
chapters/explicit_template_specialization/: meson.build
chapters/fold_expression/: 01_unary_right_fold.cpp  02_unary_left_fold.cpp  04_binary_left_fold.cpp  README.md
chapters/full_template_specialization/: 01_function_template_full__specialization.cpp  02_class_template_full_specialization.cpp  03_variable_template_full__specialization.cpp  04_function_template_specialize_after_instantiazed_error.cpp  05_incomplete_specialization.cpp  06_specialization_version_keywords.cpp  07_specialization_members.cpp
chapters/function_template/: 01_universal_reference_and_collapsing.cpp  02_default_tempalte_type_and_decltype.cpp  03_non_type_template_param.cpp  04_overload_template_func.cpp  05_variadic_function_template.cpp  meson.build
chapters/partial_specialization/: 01_variable_partial_specialization.cpp  03_is_same_v_example.cpp  (+2 more)
utils/: meson.build  signature.cpp  signature.h
(+35 files in other folders)
